# carlie

./: .gitignore  README.md  build.gradle  cmake-run-build  generate-jni-header  gradle-compile-c-sources-script  settings.gradle
docs/carlie/: README.md  io.seventeenninetyone.md  package-list
docs/carlie/alltypes/: README.md
docs/carlie/io.seventeenninetyone.carlie/: index.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/: README.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-client-connected-event-handler-function/: README.md  handle.md  invoke.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-closed-event-handler-function/: README.md  handle.md  invoke.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-error-occurred-event-handler-function/: handle.md  index.md  invoke.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-invalid-port-exception/: -init-.md  README.md  serial-version-u-i-d.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-listening-event-handler-function/: handle.md  index.md  invoke.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-server-already-listening-exception/: -init-.md  index.md  serial-version-u-i-d.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-server-closed-exception/: -init-.md  README.md  serial-version-u-i-d.md
docs/carlie/io.seventeenninetyone.carlie.tcp_server/-uv-exception/: -init-.md  index.md  serial-version-u-i-d.md
docs/carlie/io.seventeenninetyone.carlie/-tcp-server/: -init-.md  address.md  connections-count.md  index.md  is-listening.md  listen.md  on-client-connected.md  on-error-occurred.md  once-closed.md  once-listening.md  start.md  stop.md  to-string.md
docs/carlie/io.seventeenninetyone.carlie/-tcp-server/-address/: component1.md  component2.md  component3.md  index.md  ip.md  port.md  version.md
docs/carlie/io.seventeenninetyone.carlie/-tcp-server/-connection/: README.md  as-input-stream.md  as-output-stream.md  close.md  disable-keep-alive.md  enable-keep-alive.md  id.md  is-keep-alive-enabled.md  local-address.md  on-error-occurred.md  once-closed.md  read.md  remote-address.md  server.md  to-string.md  write.md
resources/jdk/: .gitignore
resources/jdk/linux/aarch64/: release
resources/jdk/linux/aarch64/jre/lib/: jexec
resources/jdk/linux/aarch64/jre/lib/aarch64/: libfreetype.so.6
resources/jdk/mac/x86_64/Contents/: Info.plist
resources/jdk/mac/x86_64/Contents/Home/: release
resources/jdk/mac/x86_64/Contents/Home/jre/lib/: jspawnhelper  libAppleScriptEngine.dylib  libattach.dylib  libawt.dylib  libawt_lwawt.dylib  libdt_socket.dylib  libfontmanager.dylib  libfreetype.6.dylib  libfreetype.dylib.6  libhprof.dylib  libinstrument.dylib  libj2gss.dylib  libj2pcsc.dylib  libj2pkcs11.dylib  libjaas_unix.dylib  libjava.dylib  libjava_crw_demo.dylib  libjawt.dylib  libjdwp.dylib  libjpeg.dylib  libjsdt.dylib  libjsig.dylib  libjsound.dylib  liblcms.dylib  libmanagement.dylib  libmlib_image.dylib  libnet.dylib  libnio.dylib  libnpt.dylib  libosx.dylib  libosxapp.dylib  libosxkrb5.dylib  libosxui.dylib  libsaproc.dylib  libsplashscreen.dylib  libsunec.dylib  libunpack.dylib  libverify.dylib  libzip.dylib
resources/jdk/windows/x86/: release
resources/jdk/windows/x86/demo/jvmti/compiledMethodLoad/lib/: compiledMethodLoad.exp  compiledMethodLoad.lib
resources/jdk/windows/x86/demo/jvmti/gctest/lib/: gctest.exp  gctest.lib
resources/jdk/windows/x86/demo/jvmti/heapTracker/lib/: heapTracker.exp  heapTracker.lib
resources/jdk/windows/x86/demo/jvmti/heapViewer/lib/: heapViewer.exp  heapViewer.lib
resources/jdk/windows/x86/demo/jvmti/hprof/lib/: hprof.exp  hprof.lib
resources/jdk/windows/x86/demo/jvmti/minst/lib/: minst.exp  minst.lib
resources/jdk/windows/x86/demo/jvmti/mtrace/lib/: mtrace.exp  mtrace.lib
resources/jdk/windows/x86/demo/jvmti/versionCheck/lib/: versionCheck.exp  versionCheck.lib
resources/jdk/windows/x86/demo/jvmti/waiters/lib/: waiters.exp  waiters.lib
resources/jdk/windows/x86/lib/: jawt.lib  jvm.lib
resources/jdk/windows/x86_64/demo/jvmti/compiledMethodLoad/lib/: compiledMethodLoad.exp  compiledMethodLoad.lib
resources/jdk/windows/x86_64/demo/jvmti/gctest/lib/: gctest.exp  gctest.lib
resources/jdk/windows/x86_64/lib/: jawt.lib  jvm.lib
resources/native/: .gitignore
src/main/java/io/seventeenninetyone/carlie/: Dummy.java
src/main/kotlin/io/seventeenninetyone/: .gitignore  Project.kt.txt
src/main/kotlin/io/seventeenninetyone/carlie/: TcpServer.kt
src/main/kotlin/io/seventeenninetyone/carlie/events/: EventEmitter.kt  EventEmitterInvalidEventNameException.kt  EventHandlerFunction.kt
src/main/kotlin/io/seventeenninetyone/carlie/tcp_server/: ClientConnectedEventHandlerFunction.kt  ClosedEventHandlerFunction.kt  ErrorOccurredEventHandlerFunction.kt  InvalidPortException.kt  ListeningEventHandlerFunction.kt  ServerAlreadyListeningException.kt  ServerClosedException.kt  UvException.kt
src/main/kotlin/io/seventeenninetyone/carlie/utilities/: NativeLibraryLoader.kt  NativeLibraryLoaderLibraryFileNotFoundException.kt  NativeLibraryLoaderLibraryLoadFailureException.kt  NativeLibraryLoaderPlatform.kt  NativeLibraryLoaderPlatformNotSupportedException.kt  OperatingSystem.kt  SimpleAtomicLock.kt
src/main/native/: .gitignore
src/main/native/carlie/: CMakeLists.txt  common.h  dummy-class.c  dummy-class.h  library.c  library.h  tcp-server-class.c  tcp-server-class.h
src/main/native/carlie/jdk/: jni_util.c  jni_util.h  jni_util_md-solaris.c  jni_util_md-windows.c
src/main/native/carlie/tcp-server/: uv-exception-class.c  uv-exception-class.h
src/main/resources/: .gitignore
src/test/java/io/seventeenninetyone/carlie/events/: EventEmitterTests.java
tools/cross-compile/: cmake-run-build  create-dockcross-scripts  dockcross-linux-arm64  dockcross-windows-x64-shared  dockcross-windows-x86-static  run-linux-aarch64  run-linux-armv7  run-linux-x86_64  run-mac-x86_64  run-windows-x86  run-windows-x86-shared  run-windows-x86-static  run-windows-x86_64  run-windows-x86_64-shared  run-windows-x86_64-static
(+31 files in other folders)
